--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/z0d37v5r?key=d0bf63655eec1f0278651304bf18b27c" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
